In gcc/objc/: 2010-12-29  Nicola Pero  <nicola.pero@meta-innovation.com>

PR objc/47118
	* objc-act.c (objc_build_synchronized): Check the argument of
	@synchronized and emit an appropriate error if it is not a valid
	Objective-C object.  Deal gracefully with that case.  Updated
	comments and variable names.

In gcc/testsuite/:
2010-12-29  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR objc/47118
	* objc.dg/sync-3.m: New.
	* obj-c++.dg/sync-3.mm: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168326 138bc75d-0d04-0410-961f-82ee72b054a4